# Testprojekt

./: README.md
.github/workflows/: deploy.yml
kitakosten/: .env.example  .gitignore  README.md
kitakosten/.github/workflows/: deploy.yml
kitakosten/data/kommunen/: berlin.json  koeln.json  muenchen.json  nagold.json  stuttgart.json  torgau.json
kitakosten/data/schema/: gebuehrenmodell.schema.json
kitakosten/pipeline/: __init__.py  __main__.py  extract.py  fetch.py  kommunen-liste.csv  pyproject.toml  validate.py
kitakosten/web/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
kitakosten/web/public/: robots.txt
kitakosten/web/src/components/: Disclaimer.astro  Footer.astro  GebuehrenTabelle.astro  Header.astro  KonfidenzHinweis.astro  Rechner.tsx
kitakosten/web/src/layouts/: BaseLayout.astro  RatgeberLayout.astro
kitakosten/web/src/lib/: berechnung.test.ts  berechnung.ts  faq.ts  format.ts  gebuehrenmodell.ts  kommunen.ts
kitakosten/web/src/pages/: datenschutz.astro  impressum.astro  index.astro  vergleich.astro
kitakosten/web/src/pages/kita-gebuehren/: [slug].astro
kitakosten/web/src/pages/ratgeber/: geschwisterrabatt-kita.md  index.astro  kita-beitrag-absetzen-steuer.md  wie-werden-kita-gebuehren-berechnet.md
kitakosten/web/src/styles/: global.css
